[package]
name = "moon-unit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bon = "3.6.3"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = "0.3"
tokio = { version = "1.44.2", features = ["full"] }

[dev-dependencies]
insta = { version = "1.42", features = ["json"] }
